# flashcard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
k8s/: app-secret.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
perf/: load-test.js
postman/: flashcard-api.postman_collection.json  flashcard-local.postman_environment.json
src/: app.py  config.py  models.py
src/controllers/: auth_controller.py  deck_controller.py  view_controller.py
src/middleware/: auth.py
src/repositories/: deck_repository.py  flashcard_repository.py
src/services/: auth_service.py  deck_service.py  errors.py  s3_service.py
src/templates/: auth.html  base.html  deck_detail.html  index.html
tests/: conftest.py  factories.py
tests/e2e/: conftest.py  test_auth_ui.py  test_deck_detail_ui.py  test_deck_list_ui.py  test_flashcard_flow.py  test_study_mode_ui.py
tests/integration/: test_deck_api.py  test_postgres_container.py  test_s3_export.py
tests/unit/: test_deck_service.py
