[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcard"
version = "0.1.0"
description = "Katmanli Flask flashcard API baslangici"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "prometheus-client>=0.20.0",
    "prometheus-flask-exporter>=0.23.2",
    "psycopg[binary]>=3.1.18",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.0",
    "Faker>=24.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "requests>=2.31.0",
    "ruff>=0.4.0",
    "testcontainers>=4.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "unit: servis katmani unit testleri",
    "integration: Flask ve veritabani entegrasyon testleri",
    "e2e: HTTP uzerinden uctan uca testler",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.setuptools]
py-modules = ["app", "config", "extensions", "models"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
